--- a/app/bower.json
+++ b/app/bower.json
@@ -16,5 +16,10 @@
     "lib",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "polymer": "Polymer/polymer#~0.3.5",
+    "core-elements": "Polymer/core-elements#~0.3.5",
+    "paper-elements": "Polymer/paper-elements#~0.3.5"
+  }
 }
