Fixed typo in bower.json, added gulp and other dependencies, updated .gitignore for node_modules.

--- a/app/bower.json
+++ b/app/bower.json
@@ -6,7 +6,7 @@
     "Astha <asthamaths@gmail.com>",
     "Shantanu <shantanuraj@ovi.com>"
   ],
-  "description": "Astha Sharma portfoliotr",
+  "description": "Astha Sharma portfolio",
   "license": "MIT",
   "private": true,
   "ignore": [
