Reduce margin on mobile devices, add vulcanize to project dependency.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "opn": "^1.0.0",
     "psi": "^0.1.2",
     "require-dir": "^0.1.0",
-    "run-sequence": "^0.3.6"
+    "run-sequence": "^0.3.6",
+    "vulcanize": "^0.4.2"
   },
   "engines": {
     "node": ">=0.10.0"
