--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Astha Sharma",
-  "short_name": "Astha.me",
+  "name": "Shantanu Raj",
+  "short_name": "Sraj.me",
   "icons": [{
         "src": "images/touch/icon-128x128.png",
         "sizes": "128x128"
