--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Shantanu Raj",
-  "short_name": "Sraj.me",
+  "short_name": "sraj.me",
   "icons": [{
         "src": "images/touch/icon-128x128.png",
         "sizes": "128x128"
@@ -14,6 +14,6 @@
         "src": "images/touch/chrome-touch-icon-192x192.png",
         "sizes": "192x192"
       }],
-  "start_url": "/index.html?homescreen=1",
+  "start_url": "/index.html",
   "display": "standalone"
 }
