--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "predeploy": "npm run build",
-    "deploy": "now public"
+    "predeploy": "npm run build && cp now.json public/",
+    "deploy": "now public --target production"
   },
   "repository": {
     "type": "git",
